Fix: spacing + alignment

--- a/src/styles/scss/_variables.scss
+++ b/src/styles/scss/_variables.scss
@@ -13,6 +13,7 @@
     --grey                : rgba(0, 0, 0, 0.6);
     --yellow              : #ffd622ff;
     --blue                : #0770f3;
+    --orange              : #ff5916;
     --alt-blue            : #266590;
     --heading-color       : var(--primary-color);
     --text-color          : rgba(0, 0, 0, 0.5);
