--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -164,6 +164,7 @@ ul {
         position: relative;
         padding-left: 1rem;
         margin-bottom: 0.75rem;
+        color: var(--text-color);
     }
 }
 
